org.mmisw.ont - Ontology and Term URI resolver 
Carlos Rueda - MMI / MBARI

ChangeLog

2009-04-07:
	- Fix of issue #123: "encoded URI not properly handled" (MmiUri, MmiUriTest)

2009-04-01
	- HtmlDispacher.appendHtmlIfResolvableByThisService is now the way to properly
	  prepare refered resources that are resolvable by the service (so they are links 
	  to the HTML format as well).
	  
	- code clean-up: moved some special dispatchs from _resolveUri.
	
	
2009-03-27
	- UriResolver: some doc updates and minor code re-arrangements (no changes in logic)
	
	- JenaUtil2: some pending renamings done:
		getURIForBase --> removeTrailingFragment
		getURIForNS   --> appendFragment
	
	- Sparql: enabled DESCRIBE responses.
	
	- Fixed 100: "term URI always resolved in HTML"
		- TermExtractor: extracts a model with information about the requested entity.
		- UriResolver._resolveUriOntFormat: serialized resulting model in the requested format. 
	
2009-03-21
	- Just comment about Omv.acronym saying that is about "resourceType" not "shortName"
       
	 
2009-03-19:   (1.0.0.beta)
	- Issue 8: "Improve HTML response"
	  Added a header with logo and links to semanticframework

2009-03-17:   (0.2.0.beta7)
	- Code clean-up:
		- Removed unused types: MdDispatcher, MdHelper, AttrGroup, AttrDef.
		  Medatada is handled in "ontmd" project. See 2008-11-14 comment below.
		
		
		
2009-03-16:
	- Fixed Issue 102: "searches should be against the "unversioned" form of the latest ontologies"
 	  See OntGraph.
 	  NOTE: *only* the "unversioned" latest versions are loaded into the graph so all
	  responses will be now in unversioned form.
	  Fix available as of 0.2.0.beta6
	  
	- Sparql: make links for good URLs in html response. The ones that are good MmiUri's are
	  appended ".html" so the HTML output format is transferred for subsequent resolution.
	  This fixes Issue 103: "make links for well formed URLs in HTML query reponse"
 	  

2009-03-15:
	- Fixed issue 101: "Inexistent term is resolved"