@@ -1,8 +1,13 @@
 org.mmisw.ont - Ontology and Term URI resolver 
 Carlos Rueda - MMI / MBARI
+$Id$
 
 ChangeLog
 
+2009-04-29:
+	- Some refactorings/clean-up:
+		- new RegularFileDispatcher
+		
 2009-04-07:
 	- Fix of issue #123: "encoded URI not properly handled" (MmiUri, MmiUriTest)
 
